# ApexChainx-Contracts

./: CONTRIBUTING.md  README.md
apexchainx_calculator/: Cargo.toml
apexchainx_calculator/src/: config_freeze.rs  config_metadata.rs  coordination_harness.rs  cross_contract_safety.rs  event_correlation.rs  event_schema.rs  lib.rs  pruning_perf.rs  tests.rs  version_negotiation.rs
docs/: CODEX_CONTEXT.md  PROJECT_CONTEXT.md  config-validation.md
